Replace Multimap in ObjectLiteral with Map
It's not allowed to have duplicate keys